sites/all/themes/urbanmediaspace/css/urbanmediaspace.css
/* CSS: Brian Jensen @ www.magnify.dk */



/*
  Temporary stuff
*/

/*
  Hide views admin links
*/
.views-admin-links.views-hide {
  display: none;
}



/*
  Font, colors etc.
*/

/*
  Default
*/

body {
  color: #000;
  font: 100%/150% Verdana, Arial, sans-serif;
}

a,
a:link,
a:visited,
a:hover,
a:active {
  color: #f45000;
}

p, dl, hr, h1, h2, h3, h4, h5, h6, ol, ul, pre, table, address, fieldset {
  margin-bottom: 10px;
}

/*
  aaktopbar
*/

#aaktopbar a {
  color: #000;
  font: 12px Arial, Verdana, sans-serif;
  text-decoration: none;
}

#aaktopbar a:link,
#aaktopbar a:visited {
}

#aaktopbar a:hover,
#aaktopbar a:active {
  text-decoration: underline;
}

/*
  Site header
*/

#site-subheader {
  position: absolute;
  top: 0;
}

/*
  Generel elements
*/

h1#page-title {
  border-bottom: 1px solid #e5e5e5;
  color: #3f3f3f;
  font: 225% Georgia, Times New Roman, Arial, sans-serif;
  line-height: 150%;
}

.form-submit {
  background: #ebebeb url('../gfx/sprites-gradient-bgs.png') repeat-x 0 -487px;
  border-top: 1px solid #dedede;
  border-right: 1px solid #c7c7c7;
  border-bottom: 1px solid #c7c7c7;
  border-left: 1px solid #dedede;
  color: #616161;
  cursor: pointer;
  font-size: 90%;
  font-weight: bold;
  padding: 5px 10px;
}

.form-submit:hover {
  border: 1px solid #73ab22;
}

.form-text {
  background: #fff url('../gfx/sprites-gradient-bgs.png') repeat-x 0 -372px;
  border: 2px solid #d4d4d4;
  padding: 3px 3px 4px;
}

/*
  Loader
*/

.ahah-progress .throbber {
  background: url('../gfx/loader.gif') no-repeat;
  padding: 8px;
}

/*
  Secondary links
*/

#block-menu-secondary-links {
  font-size: 80%;
  line-height: 200%;
}

#block-menu-secondary-links a,
#block-menu-secondary-links a:link,
#block-menu-secondary-links a:visited {
  color: #000;
  text-decoration: none;
}

#block-menu-secondary-links a:hover,
#block-menu-secondary-links a:active {
  color: #989898;
}

/*
  Mainmenu
*/

#main-menu {
  line-height: 250%;
}

#main-menu li.first {
  margin: 0 15px 0 30px;
}

#main-menu li {
  margin: 0 15px;
}

#main-menu a,
#main-menu a:link,
#main-menu a:visited {
  color: #fff;
  text-decoration: none;
  text-shadow: 1px 1px 0 #000;
}

#main-menu a:hover,
#main-menu a:active {
  color: #ffdcb9;
}

#main-menu a.active,
#main-menu a.active:hover,
#main-menu a.active-trail,
#main-menu a.active-trail:hover {
  color: #fff;
  font-weight: bold;
}

/*
  Breadcrumb
*/

.breadcrumb {
  color: #999999;
  font-size: 70%;
  line-height: 250%;
}

.breadcrumb a,
.breadcrumb a:link,
.breadcrumb a:visited {
  color: #f45000;
  text-decoration: none;
}

.breadcrumb a:hover {
  text-decoration: underline;
}

.breadcrumb a:hover {
  color: #f45000;
}

.breadcrumb span {
  color: #999999;
}

/*
  Content
*/

#content {
  font-size: 100%;
  color: #726557;
}

#content #content-inner {
  font-size: 75%;
}

/*
  Front specific
*/

.front h1#page-title {
  border: 0;
  margin: 0 0 10px;
}

.front .content p a.nodepicker-link {
  background: url('../gfx/sprites-icons.png') no-repeat 0 0;
  color: #f45000;
  font-size: 110%;
  font-weight: bold;
  padding: 3px 0 3px 30px;
  text-decoration: none;
}

.front .content p a.nodepicker-link:hover {
  color: #8d3205;
}

/*
  Submenu
*/

#sidebar-left .menu {
  font-size: 100%;
  margin: 0;
}

#sidebar-left .menu li {
  line-height: 175%;
  padding: 0;
}

#sidebar-left .menu a {
  background: url('../gfx/sprites-icons.png') no-repeat 5px -237px;
  color: #666666;
  display: block;
  font-size: 75%;
  padding: 3px 0 3px 20px;
  text-decoration: none;
}

#sidebar-left .menu a.active {
  color: #f45000;  
}

#sidebar-left .menu a,
#sidebar-left .menu a:link,
#sidebar-left .menu a:visited {
  text-decoration: none;
}

#sidebar-left .menu a:hover {
  text-decoration: underline;
  color: #f45000;
}

#sidebar-left .menu li li a {
  font-size: 75%;
}

/*
  Block
*/

#sidebar-right .block {
  border-bottom: 1px solid #e5e5e5;
  line-height: 150%;
  margin: 0 0 20px;
  overflow: auto;
  padding: 0 0 20px;
}

/*
  Spotboxes
*/

#sidebar-right .region .block-nodeasblock,
#content-bottom .region .block-nodeasblock,
#sidebar-right .region .block-inner,
#content-bottom .region .block-inner {
  float: left;
}

.block-nodeasblock .spotbox * {
  color: #fff;
  text-decoration: none;
}

.block-nodeasblock .spotbox .content {
  color: #726557;
  line-height: 135%;
}

.block-nodeasblock .spotbox .link a {
  color: #f45000;
  font-weight: bold;
}

.block-nodeasblock .spotbox .link a:hover {
  color: #8d3205;
}



















/*
  Layout
*/

/*
  Backgrounds
*/

html {
  height: 100%;
}

body {
  background: url('/sites/default/files/background_images/urban-media-space-1.jpg') no-repeat center 80px;
  min-height: 100%;
}

/*
  Wrapper
*/

#wrapper {
  background: url('../gfx/body-background.png') no-repeat center 196px;
  left: 0;
  min-height: 900px;
  position: absolute;
  top: 0;
  width: 100%;
}

/*
  Grid styling
*/

.grid-1,
.grid-2,
.grid-3,
.grid-4,
.grid-5,
.grid-6,
.grid-7,
.grid-8,
.grid-9,
.grid-10,
.grid-11,
.grid-12,
.grid-13,
.grid-14,
.grid-15,
.grid-16 {
  margin: 0;
}

.container-12 .grid-12,
.container-16 .grid-16 {
  width: 960px;
}

.container-12 .grid-9,
.container-16 .grid-12 {
  width:720px;
}

.container-16 .suffix-1,
.container-16 .prefix-1 {
  padding: 0;
}

.container-12 .grid-3,
.container-16 .grid-4 {
  width: 220px;
}

.container-12 .push-3,
.container-16 .push-4  {
  left: 240px;
}

.container-12 .pull-9,
.container-16 .pull-12 {
  left:-700px;
}

/*
  Context
*/

body.context-editing div.context-block-region div.context-block {
  float: left;
  opacity: 1;
}

body.context-editing .region.region-right .ui-sortable,
body.context-editing #content-bottom .ui-sortable {
  background-color: #cccccc;
  border: 2px dashed #666666;
  border-radius: 4px;
  color: #666666;
  display: block !important;
  float: left;
  margin: 10px 0;
  opacity: 0.5;
  padding: 25px 10px;
  width: 100%;
  z-index: 100;
}
/* ... */

